add SEE ALSO for chained attribute modules

--- a/README.pod
+++ b/README.pod
@@ -56,6 +56,6 @@ This is free software, licensed under:
 
 =head1 SEE ALSO
 
-L<Object::Tap>
+L<Object::Tap>, L<MooX::ChainedAttributes>, L<MooseX::Attribute::Chained>
 
 =cut
